--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,7 @@
 				<executions>
 					<execution>
 						<goals>
-							<goal>repackage</goal>
+							<goal>build-info</goal>
 						</goals>
 					</execution>
 				</executions>
